--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.mail.username=joel.miguel@utec.edu.pe
 spring.mail.password=kjzn eebv rezd bjqq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.main.allow-circular-references=true
